# Ayiah

./: .env  .gitignore  .rules  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yaml
apps/docs/: package.json
apps/server/: Cargo.toml
apps/server/src/: lib.rs  main.rs
apps/server/src/app/: config.rs
apps/server/src/middleware/: logger.rs
apps/server/src/routes/: openapi.rs
apps/server/src/routes/api/: mod.rs
apps/server/src/service/: mutation.rs  query.rs
apps/server/src/utils/: crypto.rs
apps/web/: biome.json  package.json
crates/ayiah-macros/: Cargo.toml
crates/ayiah-macros/src/: lib.rs
crates/ayiah-migration/: Cargo.toml
crates/ayiah-migration/src/: lib.rs  m20250317_074800_create_user.rs
crates/ayiah-provider/: Cargo.toml
crates/ayiah-provider/src/: lib.rs
crates/ayiah-scraper/: Cargo.toml
crates/ayiah-scraper/src/: lib.rs
crates/ayiah-scraper/src/provider/: mod.rs
crates/ayiah-scraper/src/provider/anilist/: mod.rs
crates/ayiah-scraper/src/provider/bangumi/: mod.rs
crates/ayiah-scraper/src/provider/hp/: mod.rs
crates/ayiah-scraper/src/provider/tmdb/: mod.rs
crates/ayiah-scraper/src/provider/tvdb/: mod.rs
migrations/: 20251011084509_create_users_table.sql  20251011084516_create_library_folders_table.sql  20251011084522_create_media_items_table.sql  20251011084528_create_video_metadata_table.sql
src/: config.rs  context.rs  error.rs  graceful_shutdown.rs  lib.rs  logging.rs  main.rs
src/app/: config.rs  db.rs  mod.rs  state.rs
src/db/: mod.rs
src/db/entity/: user.rs
src/db/migration/: m20250317_074800_create_user.rs
src/db/schema/: mod.rs
src/entities/: library_folder.rs  media_item.rs  mod.rs  video_metadata.rs
src/entity/: mod.rs  prelude.rs  user.rs  user_preferences.rs
src/integration/: mod.rs
src/middleware/: auth.rs  logger.rs  mod.rs
src/migration/: m20250317_074800_create_user.rs  m20250317_074842_create_user_preferences.rs  mod.rs
src/models/: mod.rs  user.rs  user_preferences.rs
src/models/entities/: user.rs
src/routes/: mod.rs  openapi.rs
src/routes/api/: comic.rs  downloader.rs  health.rs  history.rs  library.rs  library_folders.rs  mod.rs  music.rs  novel.rs  provider.rs  report.rs  scrape.rs  search.rs  stream.rs  torrent.rs  update.rs  users.rs  video.rs  watchlist.rs
src/routes/service/: mutation.rs  query.rs
src/scraper/: cache.rs  mod.rs  rate_limiter.rs  types.rs
src/scraper/provider/: anilist.rs  bangumi.rs  mod.rs  tmdb.rs  tvdb.rs
src/service/: query.rs
src/services/: file_scanner.rs  metadata_agent.rs  mod.rs
src/utils/: crypto.rs  graceful_shutdown.rs  logger.rs  logging.rs  mod.rs
web/: .env.example  app.config.ts  biome.json  index.html  package.json  tsr.config.json  vite.config.ts
web/src/: App.tsx  Comp.tsx  app.css  app.tsx  entry-server.tsx  index.tsx  provider.tsx  routeTree.gen.ts  router.tsx
web/src/api/: client.ts  health.ts  library-folders.ts  library.ts
web/src/components/: AddLibraryDialog.tsx  ErrorMessage.tsx  LibraryView.tsx  LoadingSpinner.tsx  MediaCard.tsx  MediaDetail.tsx  icons.tsx  navbar.tsx  primitives.ts  theme-switch.tsx
web/src/config/: site.ts
web/src/hooks/: useRouteQueryClient.ts
web/src/layouts/: default.tsx
web/src/pages/: DetailPage.tsx  HomePage.tsx  MoviesPage.tsx  TvPage.tsx  about.tsx  blog.tsx  docs.tsx  index.tsx  pricing.tsx
web/src/routes/: __root.tsx  detail.$id.tsx  health.tsx  index.tsx  libraries.tsx  movie.tsx  tv.tsx
web/src/types/: api.ts  library-folder.ts  media.ts
